# PA-Agent

crewrag/: README.md  pyproject.toml  requirements.txt
crewrag/src/crewrag/: crew.py  direct_search_results.txt  extraction_results.txt  main.py  rag_results.txt  streamlit_app.py
crewrag/src/crewrag/config/: agents.yaml  tasks.yaml
crewrag/src/crewrag/output/: query_result_1743090461.txt
crewrag/src/crewrag/tools/: __init__.py  content_parser.py  data_extraction_tool.py  file_lister.py  markdown_processor.py  md_parser.py  pdf_parser.py  pdf_processor.py  rag_query_tool.py  tool_orchestrator.py  vector_store_creator.py
