[project]
name = "crewrag"
version = "0.1.0"
description = "CREWRAG using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
crewrag = "crewrag.main:run"
run_crew = "crewrag.main:run"
train = "crewrag.main:train"
replay = "crewrag.main:replay"
test = "crewrag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
